fix(frontend): changed z-index to place navigation bar on top of all components

--- a/movie-rating-frontend/src/styles/styles.css
+++ b/movie-rating-frontend/src/styles/styles.css
@@ -44,6 +44,7 @@ h1 {
 nav {
     position: sticky;
     display: flex;
+    z-index: 1000;
     top: 0;
     min-height: 50px;
     width: 100%;
